<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DesignTestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|snap"
        >
        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->

        <ImageView
            android:id="@+id/imageViewCollapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_img"
            app:layout_collapseMode="parallax" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


            <com.smarteist.autoimageslider.SliderLayout
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimary"
                android:layout_alignParentTop="true" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="146.0dp"
            android:visibility="gone"
            android:src="@drawable/placeholder_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productBtn"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@color/darkturquoise"
                android:drawableStart="@drawable/camera_ic_01_2"
                android:paddingStart="16dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/product"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:background="@color/pumpkin_1"
                android:drawableStart="@drawable/alternative_ic"
                android:paddingStart="16dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/example"
                android:textColor="@color/white" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="15dp"
            android:background="@color/pumpkin_1" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reminder_ic"
                android:background="@color/pumpkin_1"
                android:drawableStart="@drawable/reminder_ic"
                android:drawablePadding="20dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </FrameLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/medDepId"
                android:layout_alignParentStart="true"
                android:text="@string/medicine_dep"
                android:textColor="@color/darkjunglegreen"
                android:textStyle="bold"
                android:textSize="19sp"/>

            <TextView
                android:id="@+id/text_view_11589"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/more"
                android:textSize="14sp"
                android:textColor="@color/manatee" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/medicalRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="22dp"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DepId"
            android:layout_alignParentStart="true"
            android:layout_marginTop="22dp"
            android:layout_marginStart="16dp"
            android:text="@string/departments"
            android:textColor="@color/darkjunglegreen"
            android:textStyle="bold"
            android:textSize="19sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gridRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
